# m-lite

./: Cargo.toml  README.md
.github/workflows/: main.yml
src/: config.rs  event.rs  m163.rs  main.rs  play.rs  ui.rs
src/m163/: client.rs  typ.rs
src/ui/: about.rs  app.rs  content.rs  focus.rs  footer.rs  head.rs  search.rs  slide.rs  widgets.rs  zero.rs
src/ui/widgets/: help.rs  input.rs  play_list.rs  tip.rs
