[package]
name = "music163-rs-lite"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12.24", features = ["gzip", "cookies", "multipart"] }
thiserror = "2"
serde_json = "1.0.145"
rand = "0.8"
aes = "0.8.4"
cbc = "0.1.2"
hex = "0.4"
base64 = "0.22"
serde = "1"
tokio = { version="1", features = ["full"]}
num-bigint = "0.4"
num-traits = "0.2"
rodio = { version = "0.21.1" }
ratatui = { version = "0.29.0", features = ["unstable-widget-ref"]}
color-eyre = "0.6"
tokio-util = "0.7.17"
tui-qrcode = { version = "0.1.3", default-features = false }
qrcode = { version = "0.14.1", default-features = false }
fastrand = "2.3.0"
chrono = "0.4.42"
serde_yaml = "0.9.34"
directories = "6.0.0"

